[tool.poetry]
name = "pysice"
version = "1.6"
description = ""
authors = ["Baptiste Vandecrux <bav@geus.dk>"]
repository = "https://github.com/GEUS-SICE/pySICE"


[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.13"
pandas = ">=0.20.3"
scipy = ">=1.0.0"
xarray = ">=0.10.3"
numba = ">=0.40"
rasterio = ">=1.3"
rioxarray = ">=0.12"

[tool.poetry.dev-dependencies]
nosetest = ""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
