[tool.poetry]
name = "pysice"
version = "2.0"
description = "A python package to retrieve snow optical characteristics from Sentinel-3's OLCI measurements"
authors = ["Baptiste Vandecrux <bav@geus.dk>"]
repository = "https://github.com/GEUS-SICE/pySICE"
license = "GNU-GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.13"
pandas = ">=0.20.3"
scipy = ">=1.0.0"
xarray = ">=0.10.3"
numba = ">=0.40"
rasterio = ">=1.1"
rioxarray = ">=0.8"

[tool.poetry.dev-dependencies]
nosetest = ""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"